Minmax (#626)
* Chebyshev-Lawson

- Chebyshev-Lawson approximation approach added

* Test-Case

- Test case for PTB

* Reports

- PTB test results for freely available test data sets added